adding modules: about, notifications

--- a/app/index.html
+++ b/app/index.html
@@ -83,9 +83,15 @@
         <!-- injector:js -->
         <script src="js/config.js"></script>
         <script src="js/application.js"></script>
+        <script src="modules/about/about.js"></script>
         <script src="modules/core/core.js"></script>
+        <script src="modules/notifications/notifications.js"></script>
+        <script src="modules/about/config/routes.js"></script>
         <script src="modules/core/config/routes.js"></script>
+        <script src="modules/notifications/config/routes.js"></script>
+        <script src="modules/about/controllers/about.js"></script>
         <script src="modules/core/controllers/home.js"></script>
+        <script src="modules/notifications/controllers/notifications.js"></script>
         <!-- endinjector -->
     <!-- endbuild -->
 
